--- a/notebooks/P8_notebook_local.ipynb
+++ b/notebooks/P8_notebook_local.ipynb
@@ -1170,6 +1170,7 @@
    "execution_count": 61,
    "id": "472bd865",
    "metadata": {
+    "scrolled": true,
     "vscode": {
      "languageId": "plaintext"
     }
