--- a/notebooks/P8_notebook_local.ipynb
+++ b/notebooks/P8_notebook_local.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "id": "16e54f7e",
    "metadata": {
     "vscode": {
@@ -134,22 +134,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PATH:        /home/jovyan/work\n",
-      "PATH_Data:   /home/jovyan/work/fruits-360_dataset/fruits-360/Test/Apple Braeburn\n",
-      "PATH_Result: /home/jovyan/work/fruits-360_dataset/fruits-360/Results\n",
-      "PATH_Result_PCA: /home/jovyan/work/fruits-360_dataset/fruits-360/Results_PCA\n"
+      "PATH:              /home/jovyan/work\n",
+      "PATH_Data:       /home/jovyan/work/fruits-360_dataset/fruits-360/Test/Apple Braeburn\n",
+      "PATH_Data_2:     /home/jovyan/work/fruits-360_dataset/fruits-360/Test_2\n",
+      "PATH_Result:     /home/jovyan/work/fruits-360_dataset/fruits-360/Results\n",
+      "PATH_Result_PCA: /home/jovyan/work/fruits-360_dataset/fruits-360/Results_PCA\n",
+      "PATH_Result_PCA_2:/home/jovyan/work/fruits-360_dataset/fruits-360/Results_PCA_2\n"
      ]
     }
    ],
    "source": [
     "PATH = os.getcwd()\n",
     "PATH_Data = PATH+'/fruits-360_dataset/fruits-360/Test/Apple Braeburn'\n",
+    "PATH_Data_2 = PATH+'/fruits-360_dataset/fruits-360/Test_2'\n",
     "PATH_Result = PATH+'/fruits-360_dataset/fruits-360/Results'\n",
     "PATH_Result_PCA = PATH+'/fruits-360_dataset/fruits-360/Results_PCA'\n",
-    "print('PATH:        '+\\\n",
-    "      PATH+'\\nPATH_Data:   '+\\\n",
-    "      PATH_Data+'\\nPATH_Result: '+PATH_Result+\\\n",
-    "     '\\nPATH_Result_PCA: '+PATH_Result_PCA)"
+    "PATH_Result_PCA_2 = PATH+'/fruits-360_dataset/fruits-360/Results_PCA_2'\n",
+    "print('PATH:              '+PATH+\\\n",
+    "      '\\nPATH_Data:       '+PATH_Data+\\\n",
+    "      '\\nPATH_Data_2:     '+PATH_Data_2+\\\n",
+    "      '\\nPATH_Result:     '+PATH_Result+\\\n",
+    "      '\\nPATH_Result_PCA: '+PATH_Result_PCA+\\\n",
+    "     '\\nPATH_Result_PCA_2:'+PATH_Result_PCA_2)"
    ]
   },
   {
@@ -1149,6 +1155,193 @@
    "outputs": [],
    "source": [
     "pca_result_clean.select(\"path\", \"label\", \"pca_array\").write.mode(\"overwrite\").parquet(PATH_Result_PCA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac665bc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images_2 = spark.read.format(\"binaryFile\") \\\n",
+    "  .option(\"pathGlobFilter\", \"*.jpg\") \\\n",
+    "  .option(\"recursiveFileLookup\", \"true\") \\\n",
+    "  .load(PATH_Data_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9101bc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images_2 = images_2.withColumn('label', element_at(split(images_2['path'], '/'),-2))\n",
+    "print(images_2.printSchema())\n",
+    "print(images_2.select('path','label').show(5,False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9cb7321",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_df_2 = images_2.repartition(20).select(col(\"path\"),\n",
+    "                                            col(\"label\"),\n",
+    "                                            featurize_udf(\"content\").alias(\"features\")\n",
+    "                                           )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22904d10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_vector_df_2 = features_df_2.withColumn(\"features_vector\", to_vector_udf(\"features\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38cbc344",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_vector_df_2.select('features_vector').show(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c112e3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#StandardScaler\n",
+    "scaler_2 = StandardScaler(inputCol=\"features_vector\", \n",
+    "                        outputCol=\"scaled_features\", \n",
+    "                        withMean=True,   # centrer\n",
+    "                        withStd=True)    # réduire\n",
+    "\n",
+    "# Étape 2 : Ajuster et transformer les données\n",
+    "scaler_model_2 = scaler_2.fit(features_vector_df_2)\n",
+    "scaled_df_2 = scaler_model_2.transform(features_vector_df_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d74e123",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dump du standard scaler\n",
+    "SCALER_PATH_2 = PATH+\"/models/standard_scaler_2\"\n",
+    "\n",
+    "# Sauvegarde du modèle\n",
+    "scaler_model_2.write().overwrite().save(SCALER_PATH_2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "806fd752",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#choix de k\n",
+    "pca_2 = PCA(k=100, inputCol=\"scaled_features\", outputCol=\"pca_features\")\n",
+    "model_2 = pca_2.fit(scaled_df_2)\n",
+    "\n",
+    "explained_variance_2 = model_2.explainedVariance.toArray()\n",
+    "cumulative_variance_2 = explained_variance_2.cumsum()\n",
+    "print(f\"For k = {k}, cumulative explained variance: {cumulative_variance_2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea9d20d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca_2 = PCA(k=41, inputCol=\"scaled_features\", outputCol=\"pca_features\")  # k = nombre de composantes principales désirées\n",
+    "\n",
+    "pca_model_2 = pca_2.fit(scaled_df_2)\n",
+    "\n",
+    "pca_result_2 = pca_model_2.transform(scaled_df_2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0df4715",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dump PCA\n",
+    "PCA_PATH_2 = PATH+\"/models/pca_2\"\n",
+    "\n",
+    "# Sauvegarde du modèle\n",
+    "pca_model_2.write().overwrite().save(PCA_PATH_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ce327b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector_to_array_udf = udf(lambda v: v.toArray().tolist(), ArrayType(FloatType()))\n",
+    "\n",
+    "pca_result_clean_2 = pca_result_2.withColumn(\"pca_array\", vector_to_array_udf(\"pca_features\"))\n",
+    "#pca_result_clean_2.select(\"path\", \"label\", \"pca_array\").show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eab6978a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca_result_clean_2.select(\"path\", \"label\", \"pca_array\").write.mode(\"overwrite\").parquet(PATH_Result_PCA_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e2fa7dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2 = pd.read_parquet(PATH_Result_PCA_2, engine='pyarrow')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dff71eea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8915f16d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2.loc[0,'pca_array'].shape"
    ]
   },
   {
